# ocs2_dancer

ocs2_dancer/: record.md
ocs2_dancer/dancer_controllers/: CMakeLists.txt  package.xml
ocs2_dancer/dancer_controllers/include/: LeggedRobotMrtInterface.h
ocs2_dancer/dancer_controllers/launch/: dancer_mpc_mrt.launch  dancer_test.launch  test_rviz.launch
ocs2_dancer/dancer_controllers/src/: dancerDummyNode.cpp  dancerMpcMrtNode.cpp  dancerMpcTestNode.cpp
ocs2_dancer/dancer_description/: CMakeLists.txt  package.xml
ocs2_dancer/dancer_description/meshes_dae/: head.dae  left_arm.dae  left_foot.dae  left_hand.dae  left_leg_ankle.dae  left_leg_knee.dae  left_leg_pitch.dae  left_leg_roll.dae  left_leg_yaw.dae  left_shoulder.dae  neck.dae  right_arm.dae  right_foot.dae  right_hand.dae  right_leg_ankle.dae  right_leg_knee.dae  right_leg_pitch.dae  right_leg_roll.dae  right_leg_yaw.dae  right_shoulder.dae
ocs2_dancer/dancer_description/urdf/: dancer.urdf
ocs2_dancer/dancer_interface/: CMakeLists.txt  package.xml
ocs2_dancer/dancer_interface/config/command/: gait.info  reference.info
ocs2_dancer/dancer_interface/config/mpc/: task.info
ocs2_dancer/dancer_interface/include/dancer_interface/: LeggedRobotInterface.h  LeggedRobotPreComputation.h  package_path.h.in
ocs2_dancer/dancer_interface/include/dancer_interface/common/: ModelSettings.h  Types.h  utils.h
ocs2_dancer/dancer_interface/include/dancer_interface/constraint/: EndEffectorLinearConstraint.h  FrictionConeConstraint.h  NormalVelocityConstraintCppAd.h  ZeroForceConstraint.h  ZeroVelocityConstraintCppAd.h  ZeroWrenchConstraint.h
ocs2_dancer/dancer_interface/include/dancer_interface/cost/: LeggedRobotQuadraticTrackingCost.h
ocs2_dancer/dancer_interface/include/dancer_interface/dynamics/: LeggedRobotDynamicsAD.h
ocs2_dancer/dancer_interface/include/dancer_interface/foot_planner/: CubicSpline.h  SplineCpg.h  SwingTrajectoryPlanner.h
ocs2_dancer/dancer_interface/include/dancer_interface/gait/: Gait.h  GaitSchedule.h  LegLogic.h  ModeSequenceTemplate.h  MotionPhaseDefinition.h
ocs2_dancer/dancer_interface/include/dancer_interface/initialization/: LeggedRobotInitializer.h
ocs2_dancer/dancer_interface/include/dancer_interface/reference_manager/: SwitchedModelReferenceManager.h
ocs2_dancer/dancer_interface/src/: LeggedRobotInterface.cpp  LeggedRobotPreComputation.cpp
ocs2_dancer/dancer_interface/src/common/: ModelSettings.cpp
ocs2_dancer/dancer_interface/src/constraint/: EndEffectorLinearConstraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp  ZeroWrenchConstraint.cpp
ocs2_dancer/dancer_interface/src/dynamics/: LeggedRobotDynamicsAD.cpp
ocs2_dancer/dancer_interface/src/foot_planner/: CubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
ocs2_dancer/dancer_interface/src/gait/: Gait.cpp  GaitSchedule.cpp  LegLogic.cpp  ModeSequenceTemplate.cpp
ocs2_dancer/dancer_interface/src/initialization/: LeggedRobotInitializer.cpp
ocs2_dancer/dancer_interface/src/reference_manager/: SwitchedModelReferenceManager.cpp
ocs2_dancer/dancer_interface_ros/: CMakeLists.txt  package.xml
ocs2_dancer/dancer_interface_ros/include/dancer_interface_ros/gait/: GaitKeyboardPublisher.h  GaitReceiver.h  ModeSequenceTemplateRos.h
ocs2_dancer/dancer_interface_ros/include/dancer_interface_ros/visualization/: LeggedRobotVisualizer.h
ocs2_dancer/dancer_interface_ros/launch/: dancer_ddp.launch  dancer_ipm.launch  dancer_sqp.launch  multiplot.launch
ocs2_dancer/dancer_interface_ros/rviz/: dancer.rviz
ocs2_dancer/dancer_interface_ros/src/: LeggedRobotDdpMpcNode.cpp  LeggedRobotDummyNode.cpp  LeggedRobotGaitCommandNode.cpp  LeggedRobotIpmMpcNode.cpp  LeggedRobotPoseCommandNode.cpp  LeggedRobotSqpMpcNode.cpp
ocs2_dancer/dancer_interface_ros/src/gait/: GaitKeyboardPublisher.cpp  GaitReceiver.cpp
ocs2_dancer/dancer_interface_ros/src/visualization/: LeggedRobotVisualizer.cpp
ocs2_dancer/dancer_raisim/: CMakeLists.txt  package.xml
ocs2_dancer/dancer_raisim/config/: raisim.info
ocs2_dancer/dancer_raisim/include/dancer_raisim/: LeggedRobotRaisimConversions.h  LeggedRobotRaisimVisualizer.h
ocs2_dancer/dancer_raisim/launch/: legged_robot_ddp_raisim.launch  legged_robot_sqp_raisim.launch
ocs2_dancer/dancer_raisim/src/: LeggedRobotRaisimConversions.cpp  LeggedRobotRaisimDummyNode.cpp  LeggedRobotRaisimVisualizer.cpp
