<?xml version="1.0"?>
<package format="2">
  <name>dancer_controllers</name>
  <version>0.0.0</version>
  <description>The dancer_controllers package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospack</depend>
  <depend>dancer_interface</depend>
  <depend>dancer_interface_ros</depend>
  <depend>dancer_raisim</depend>
  <!-- <depend>dancer_hw_ros</depend> -->
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
