<?xml version="1.0"?>
<package format="2">
  <name>dancer_raisim</name>
  <version>0.0.1</version>
  <description>The dancer_raisim package</description>

  <maintainer email="f2575482343@qq.com">yyn</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_clang_tools</build_depend>

  <depend>dancer_interface</depend>
  <depend>dancer_interface_ros</depend>
  <depend>ocs2_raisim_core</depend>
  <depend>ocs2_raisim_ros</depend>

</package>
